--- a/Append/index.html
+++ b/Append/index.html
@@ -95,8 +95,8 @@
 
           <div class="col-xl-5 content">
             <h3>About Us</h3>
-            <h2>Ducimus rerum libero reprehenderit cumque</h2>
-            <p>Ipsa sint sit. Quis ducimus tempore dolores impedit et dolor cumque alias maxime. Enim reiciendis minus et rerum hic non. Dicta quas cum quia maiores iure. Quidem nulla qui assumenda incidunt voluptatem tempora deleniti soluta.</p>
+            <h2>Who are we?</h2>
+            <p>Welcome to [Your Company Name], where cutting-edge AI meets smart Fintech. Our team is passionate about using the power of artificial intelligence to help revolutionize the way YOU make investment decisions.</p>
             <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
@@ -106,32 +106,37 @@
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box">
                   <i class="bi bi-buildings"></i>
-                  <h3>Eius provident</h3>
-                  <p>Magni repellendus vel ullam hic officia accusantium ipsa dolor omnis dolor voluptatem</p>
+                  <h3>Text Analysis</h3>
+                  <p>Based on the text you provide, our AI assesses your current emotional state. Whether you're overly happy, sad, depressed, or somewhere in between, our AI can detect these nuances.</p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box">
                   <i class="bi bi-clipboard-pulse"></i>
-                  <h3>Rerum aperiam</h3>
-                  <p>Autem saepe animi et aut aspernatur culpa facere. Rerum saepe rerum voluptates quia</p>
+                  <h3>Emotional Guidance</h3>
+                  <p>If you're very overly happy or feeling down our AI advises against investing to avoid impulsive decisions but if your interested and somewhat happy our AI sees this as a good time to invest.
+        
+                   </p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box">
                   <i class="bi bi-command"></i>
-                  <h3>Veniam omnis</h3>
-                  <p>Omnis perferendis molestias culpa sed. Recusandae quas possimus. Quod consequatur corrupti</p>
+                  <h3>Why Choose Us?</h3>
+                  <p>Our AI uses state-of-the-art sentiment analysis to provide advice tailored to your emotional state.</p>
+                  <p>Our AI helps mitigate the risk of emotion-driven choices.</p>
+                  <p>We aim to create a supportive environment where you can invest confidently and wisely.</p>
+
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="icon-box">
                   <i class="bi bi-graph-up-arrow"></i>
-                  <h3>Delares sapiente</h3>
-                  <p>Sint et dolor voluptas minus possimus nostrum. Reiciendis commodi eligendi omnis quideme lorenda</p>
+                  <h3>Join Us!</h3>
+                  <p>Embark on a journey of smarter investing with [Your Company Name]. Let our AI guide you towards financial decisions that are both intelligent and emotionally balanced. Together, we can achieve a more stable and prosperous financial future.</p>
                 </div>
               </div> <!-- End Icon Box -->
 
