--- a/Append/index.html
+++ b/Append/index.html
@@ -49,7 +49,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html#hero" class="">Homey</a></li>
+          <li><a href="index.html#hero" class="">Home</a></li>
           <li><a href="index.html#about">About</a></li>
           <li><a href="index.html#services">Services</a></li>
           <li><a href="index.html#team">Team</a></li>
