--- a/Append/index.html
+++ b/Append/index.html
@@ -335,7 +335,7 @@
             <div class="content px-xl-5">
               <h3><span>Frequently Asked </span><strong>Questions</strong></h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                These are questions that people tend to have about our product!
               </p>
             </div>
           </div>
@@ -416,7 +416,7 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Walter White</h4>
+              <h4>Nishanth Koushik</h4>
               <span>Chief Executive Officer</span>
               <p>Aliquam iure quaerat voluptatem praesentium possimus unde laudantium vel dolorum distinctio dire flow</p>
             </div>
@@ -433,7 +433,7 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Sarah Jhonson</h4>
+              <h4>Justin Shen</h4>
               <span>Product Manager</span>
               <p>Labore ipsam sit consequatur exercitationem rerum laboriosam laudantium aut quod dolores exercitationem ut</p>
             </div>
@@ -450,7 +450,7 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>William Anderson</h4>
+              <h4>Ritwik Rustagi</h4>
               <span>CTO</span>
               <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed facilis at qui</p>
             </div>
