--- a/Append/index.html
+++ b/Append/index.html
@@ -435,7 +435,7 @@
             <div class="member-info text-center">
               <h4>Justin Shen</h4>
               <span>Product Manager</span>
-              <p>Labore ipsam sit consequatur exercitationem rerum laboriosam laudantium aut quod dolores exercitationem ut</p>
+              <p>nigga</p>
             </div>
           </div><!-- End Team Member -->
 
