--- a/Append/index.html
+++ b/Append/index.html
@@ -82,6 +82,11 @@
               <input type="submit" class="btn btn-primary" value="Sign up">
             </form>
           </div>
+          <div class="row">
+            <div class="col-lg-10">
+              <p id="displayEmail" data-aos="fade-up" data-aos-delay="400"></p>
+            </div>
+          </div>
         </div>
       </div>
 
